| Bug #1348 | mysqldump does not quote db names when using -Q | ||
|---|---|---|---|
| Submitted: | 19 Sep 2003 8:01 | Modified: | 25 Oct 2003 5:43 |
| Reporter: | [ name withheld ] | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 4.0.14 | OS: | Linux (Linux) |
| Assigned to: | Victor Vagin | CPU Architecture: | Any |
[19 Sep 2003 8:01]
[ name withheld ]
[25 Sep 2003 23:37]
Alexander Keremidarski
Note that both behaviours are changed in 4.1 i.e. 4.1 mysqldump -Q quotes database names and 4.1 accepts USE `abc-xyz`
[24 Oct 2003 6:34]
Victor Vagin
bk commit - 4.0 tree (1.1595) ChangeSet 1.1595 03/10/24 17:26:26 vva@eagle.mysql.r18.ru +1 -0 added quotas for database names (fixed bug #1348)
[25 Oct 2003 5:43]
Victor Vagin
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
[12 Jul 2005 9:45]
mfred zipo
As old as the bug may be, it is still not solved in the Version 3 of mysql mysql --version mysql Ver 11.18 Distrib 3.23.58, for redhat-linux-gnu (i386) As Rhel among others is still using version 3 I would appreciate to have a fix on that issue also on that version. mysql -v -u xxx-pyyy < db.sql -------------- CREATE DATABASE /*!32312 IF NOT EXISTS*/ Mambo-1062505950 -------------- ERROR 1064 at line 11: You have an error in your SQL syntax near '-1062505950' at line 1
