added quotas for database names (fixed bug #1348)

client/mysqldump.c:
  added quotas for database names